# first_website

./: .gitignore  README.md  app.py  pyproject.toml
templates/: catalog.html  category.html  contacts.html  index.html
