[tool.poetry]
name = "first-website"
version = "0.1.0"
description = ""
authors = ["recently_was_good <ustinovlev039@gmail.com>"]
readme = "README.md"
packages = [{include = "first_website"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
